
namespace java com.auth.user
namespace csharp com.auth.user

struct UserInfoRequest {
    1: optional string userName,
    2: optional string password;
    3: optional string location;
}