namespace java com.auth.user
namespace csharp com.auth.user

struct UserInfoRespone {
    1: i32 id,
    2: optional string userName,
    3: optional i16 permission;
}